--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Mownota</title>
+    <title>Welcome Sadid</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -104,27 +104,27 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">আমার প্রিয়তমা মৌনতা</h1>
+        <h1 class="heading">সাদিদ কেমন আছো?</h1>
         <div class="love-box">
-            <h2>ভালোবাসি তোমায় রাত্রি</h2>
+            <h2>সাদিদ ঈদ কেমন কাটছে?</h2>
         </div>
         <div class="images-container">
             <div class="image-box">
-                <img src="https://github.com/sanjidauhin/Hei-Mownota/assets/163626650/4ea8ad8f-ce81-45ba-b490-93b22d6102fc" alt="Image 1">
+                <img src="" alt="Image 1">
             </div>
             <div class="image-box">
-                <img src="https://github.com/sanjidauhin/Hei-Mownota/assets/163626650/432fc3c7-d4fb-4604-92fb-2377540b0c1e" alt="Image 2">
+                <img src="" alt="Image 2">
             </div>
             <div class="image-box">
-                <img src="https://github.com/sanjidauhin/Hei-Mownota/assets/163626650/2ad311eb-7fde-4e81-8e83-2cd10a88689e" alt="Image 3">
+                <img src="" alt="Image 3">
             </div>
             <div class="image-box">
-                <img src="https://github.com/sanjidauhin/Hei-Mownota/assets/163626650/b5394c53-d321-4e38-928b-1e575f2d2256" alt="Image 4">
+                <img src="" alt="Image 4">
             </div>
         </div>
         <div class="question-container">
             <div class="question-box" id="questionBox">
-                <h2>ভালোবাসো আমায়??</h2>
+                <h2>্সাদিদ ঈদে সালামি পেয়েছো?</h2>
                 <div>
                     <button onclick="nextQuestion('yes')">হ্যাঁ</button>
                     <button onclick="nextQuestion('no')">না</button>
@@ -140,18 +140,18 @@
             answers.push(answer);
             if (answers.length === 1) {
                 document.getElementById('questionBox').innerHTML = `
-                    <h2>আজীবন আমার থাকবে?</h2>
+                    <h2>সাদিদ এই বাসায় কেমন লাগছে?</h2>
                     <div>
-                        <button onclick="nextQuestion('yes')">হ্যাঁ</button>
-                        <button onclick="nextQuestion('no')">না</button>
+                        <button onclick="nextQuestion('yes')">ভালো</button>
+                        <button onclick="nextQuestion('no')">খারাপ</button>
                     </div>
                 `;
             } else if (answers.length === 2) {
                 document.getElementById('questionBox').innerHTML = `
-                    <h2>বিয়ে করবে আমায়?</h2>
+                    <h2>সাদিদ ছাদে যাবা?</h2>
                     <div>
-                        <button onclick="nextQuestion('yes')">কবুল</button>
-                        <button onclick="nextQuestion('no')">ভাতার আছে আরো</button>
+                        <button onclick="nextQuestion('yes')">হ্যাঁ</button>
+                        <button onclick="nextQuestion('no')">না</button>
                     </div>
                 `;
             } else {
