--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="images-container">
             <div class="image-box">
-                <img src="" alt="Image 1">
+                <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/d96cdc8e-072f-45b9-99eb-8dc381401348" alt="Image 1">
             </div>
             <div class="image-box">
                 <img src="" alt="Image 2">
