--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/d96cdc8e-072f-45b9-99eb-8dc381401348" alt="Image 1">
             </div>
             <div class="image-box">
-                <img src="" alt="Image 2">
+                <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/879f9b58-32ac-43ef-92d5-4efae947cb51" alt="Image 2">
             </div>
             <div class="image-box">
                 <img src="" alt="Image 3">
