--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/879f9b58-32ac-43ef-92d5-4efae947cb51" alt="Image 2">
             </div>
             <div class="image-box">
-                <img src="" alt="Image 3">
+                <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/a69e24a0-8672-4e59-8817-304e2fa8ddc4" alt="Image 3">
             </div>
             <div class="image-box">
                 <img src="" alt="Image 4">
