--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/a69e24a0-8672-4e59-8817-304e2fa8ddc4" alt="Image 3">
             </div>
             <div class="image-box">
-                <img src="" alt="Image 4">
+                <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/5c5b503b-e0eb-4381-ac0b-18b450130e34" alt="Image 4">
             </div>
         </div>
         <div class="question-container">
