--- a/love-page.html
+++ b/love-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>তোমাকে ভালোবাসি আমি মৌনতা</title>
+    <title>Sadid</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,9 +65,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">পাশে রইবো আজীবন!</h1>
+        <h1 class="heading">ঈদ মোবারক সাদিদ!</h1>
         <div class="love-box">
-            <div class="love-text">সারাজীবন এভাবেই আগলে রাখবো তোমায়!</div>
+            <div class="love-text">চলো ছাদে যাই!</div>
             <img src="https://github.com/sanjidauhin/Hei-Mownota/assets/163626650/ad5e7cb6-aa1f-4306-9535-b5c20b347815" alt="Love Image">
         </div>
     </div>
