--- a/hate-page.html
+++ b/hate-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I Hate You Mownota</title>
+    <title>Saiddddid</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,9 +65,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">মৌনতা মাইর একটাও নিচে পড়বে না</h1>
+        <h1 class="heading">ঈদ মোবারক সাদিদ</h1>
         <div class="hate-box">
-            <div class="hate-text">তোর উপর ঠাডা পড়ুক!</div>
+            <div class="hate-text">চলো তাহলে দাবা খেলি!</div>
             <img src="https://github.com/sanjidauhin/Hei-Mownota/assets/163626650/b421d36b-e0a1-4fe3-a56d-de174b31adb8" alt="Hate Image">
         </div>
     </div>
