--- a/hate-page.html
+++ b/hate-page.html
@@ -68,7 +68,7 @@
         <h1 class="heading">ঈদ মোবারক সাদিদ</h1>
         <div class="hate-box">
             <div class="hate-text">চলো তাহলে দাবা খেলি!</div>
-            <img src="(https://github.com/sanjidauhin/Sadid/assets/163626650/b8d92156-950b-42b6-9c12-e5876a1d44a8" alt="Hate Image">
+            <img src="https://github.com/sanjidauhin/Sadid/assets/163626650/b8d92156-950b-42b6-9c12-e5876a1d44a8" alt="Hate Image">
         </div>
     </div>
 </body>
